<resources>
    <string name="app_name">KeYeGank</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="toolbar_title" translatable="false">M e i z h i</string>
    <string name="PrettyGirl">Pretty Girl</string>
    <string name="about_app">关于</string>
    <string name="action_settings">Settings</string>

    <string name="source_code_name">Assassinss / pretty-girl</string>
    <string name="source_code_address_declare">项目源代码的github 地址</string>

    <string name="thanks">感谢</string>
    <string name="gankio">干货集中营</string>
</resources>
